--- a/login.html
+++ b/login.html
@@ -1,1 +1,128 @@
 
+<!doctype html>
+<html lang="hi">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>लॉगिन - मोबाइल नंबर से</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background:#f3f4f6;
+      height:100vh;
+      margin:0;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+    }
+    .card {
+      background:#fff;
+      padding:24px;
+      border-radius:12px;
+      box-shadow:0 6px 20px rgba(0,0,0,0.08);
+      width:330px;
+      max-width:90%;
+      text-align:center;
+    }
+    h1 {
+      font-size:22px;
+      margin-bottom:16px;
+      color:#111827;
+    }
+    input {
+      width:100%;
+      padding:10px;
+      font-size:16px;
+      border-radius:8px;
+      border:1px solid #ccc;
+      margin-top:8px;
+    }
+    button {
+      width:100%;
+      padding:10px;
+      background:#2563eb;
+      border:none;
+      border-radius:8px;
+      color:white;
+      font-weight:600;
+      margin-top:12px;
+      cursor:pointer;
+    }
+    .error { color:red; margin-top:10px; font-size:14px; }
+    .info { color:green; margin-top:10px; font-size:14px; }
+    .welcome {
+      color:#065f46;
+      font-weight:600;
+      font-size:16px;
+      margin-top:16px;
+    }
+  </style>
+</head>
+<body>
+  <div class="card" id="card">
+    <h1>मोबाइल से लॉगिन करें</h1>
+
+    <div id="loginSection">
+      <input id="mobile" type="tel" maxlength="10" placeholder="अपना मोबाइल नंबर डालें" />
+      <button onclick="checkNumber()">जारी रखें</button>
+      <p id="message"></p>
+    </div>
+
+    <div id="dashboard" style="display:none">
+      <p class="welcome" id="welcomeText"></p>
+      <p class="info">आप सफलतापूर्वक लॉगिन हो गए हैं।</p>
+      <button style="background:#dc2626" onclick="logout()">लॉगआउट</button>
+    </div>
+  </div>
+
+  <script>
+    // पहले से रजिस्टर्ड नंबर (यहाँ अपने ग्राहक/यूज़र के नंबर डाल सकते हैं)
+    const registeredNumbers = ["9876543210", "9999999999", "7012345678"];
+
+    const message = document.getElementById("message");
+    const loginSection = document.getElementById("loginSection");
+    const dashboard = document.getElementById("dashboard");
+    const welcomeText = document.getElementById("welcomeText");
+    const mobileInput = document.getElementById("mobile");
+
+    function checkNumber() {
+      const mobile = mobileInput.value.trim();
+      message.className = "";
+      message.textContent = "";
+
+      if (!/^[0-9]{10}$/.test(mobile)) {
+        message.className = "error";
+        message.textContent = "कृपया 10 अंकों का सही मोबाइल नंबर डालें।";
+        return;
+      }
+
+      message.className = "info";
+      message.textContent = "नंबर की जांच की जा रही है...";
+
+      // थोड़ा विलंब ताकि असली जैसा लगे
+      setTimeout(() => {
+        if (registeredNumbers.includes(mobile)) {
+          // लॉगिन सफल
+          loginSection.style.display = "none";
+          dashboard.style.display = "block";
+          welcomeText.textContent = "स्वागत है " + maskNumber(mobile) + " जी 🙏";
+        } else {
+          message.className = "error";
+          message.textContent = "यह नंबर रजिस्टर्ड नहीं है। कृपया बाद में रजिस्टर करें।";
+        }
+      }, 1000);
+    }
+
+    function maskNumber(num) {
+      return num.slice(0,3) + "****" + num.slice(7);
+    }
+
+    function logout() {
+      dashboard.style.display = "none";
+      loginSection.style.display = "block";
+      mobileInput.value = "";
+      message.textContent = "";
+    }
+  </script>
+</body>
+</html>
