--- a/login.html
+++ b/login.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="hi">
 <head>
@@ -6,60 +5,22 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>लॉगिन - मोबाइल नंबर से</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background:#f3f4f6;
-      height:100vh;
-      margin:0;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-    }
-    .card {
-      background:#fff;
-      padding:24px;
-      border-radius:12px;
-      box-shadow:0 6px 20px rgba(0,0,0,0.08);
-      width:330px;
-      max-width:90%;
-      text-align:center;
-    }
-    h1 {
-      font-size:22px;
-      margin-bottom:16px;
-      color:#111827;
-    }
-    input {
-      width:100%;
-      padding:10px;
-      font-size:16px;
-      border-radius:8px;
-      border:1px solid #ccc;
-      margin-top:8px;
-    }
-    button {
-      width:100%;
-      padding:10px;
-      background:#2563eb;
-      border:none;
-      border-radius:8px;
-      color:white;
-      font-weight:600;
-      margin-top:12px;
-      cursor:pointer;
-    }
-    .error { color:red; margin-top:10px; font-size:14px; }
-    .info { color:green; margin-top:10px; font-size:14px; }
-    .welcome {
-      color:#065f46;
-      font-weight:600;
-      font-size:16px;
-      margin-top:16px;
-    }
+    body { font-family: Arial, sans-serif; background:#f3f4f6; height:100vh; margin:0; display:flex; align-items:center; justify-content:center; }
+    .card { background:#fff; padding:24px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.08); width:330px; max-width:94%; text-align:center; }
+    .logo { width:90px; height:90px; object-fit:contain; display:block; margin:0 auto 12px; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.08); }
+    h1 { font-size:20px; margin:0 0 8px; color:#111827; }
+    input { width:100%; padding:10px; margin-top:8px; border-radius:8px; border:1px solid #ccc; font-size:16px; box-sizing:border-box; }
+    button { width:100%; padding:10px; margin-top:12px; border-radius:8px; border:0; background:#2563eb; color:#fff; font-weight:600; cursor:pointer; }
+    .error { color:#b91c1c; margin-top:10px; }
+    .info { color:#065f46; margin-top:10px; }
+    .welcome { color:#065f46; font-weight:600; margin-top:16px; }
   </style>
 </head>
 <body>
   <div class="card" id="card">
+    <!-- अगर आपने logo.png अपलोड किया है तो यह लाइन इस्तेमाल करें -->
+    <img src="logo.png" alt="Site Logo" class="logo">
+
     <h1>मोबाइल से लॉगिन करें</h1>
 
     <div id="loginSection">
@@ -76,9 +37,7 @@
   </div>
 
   <script>
-    // पहले से रजिस्टर्ड नंबर (यहाँ अपने ग्राहक/यूज़र के नंबर डाल सकते हैं)
     const registeredNumbers = ["9876543210", "9999999999", "7012345678"];
-
     const message = document.getElementById("message");
     const loginSection = document.getElementById("loginSection");
     const dashboard = document.getElementById("dashboard");
@@ -89,20 +48,15 @@
       const mobile = mobileInput.value.trim();
       message.className = "";
       message.textContent = "";
-
       if (!/^[0-9]{10}$/.test(mobile)) {
         message.className = "error";
         message.textContent = "कृपया 10 अंकों का सही मोबाइल नंबर डालें।";
         return;
       }
-
       message.className = "info";
       message.textContent = "नंबर की जांच की जा रही है...";
-
-      // थोड़ा विलंब ताकि असली जैसा लगे
       setTimeout(() => {
         if (registeredNumbers.includes(mobile)) {
-          // लॉगिन सफल
           loginSection.style.display = "none";
           dashboard.style.display = "block";
           welcomeText.textContent = "स्वागत है " + maskNumber(mobile) + " जी 🙏";
@@ -110,13 +64,12 @@
           message.className = "error";
           message.textContent = "यह नंबर रजिस्टर्ड नहीं है। कृपया बाद में रजिस्टर करें।";
         }
-      }, 1000);
+      }, 700);
     }
 
     function maskNumber(num) {
       return num.slice(0,3) + "****" + num.slice(7);
     }
-
     function logout() {
       dashboard.style.display = "none";
       loginSection.style.display = "block";
