--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 <body>
   <div class="card" id="card">
     <!-- अगर आपने logo.png अपलोड किया है तो यह लाइन इस्तेमाल करें -->
-    <img src="logo.png" alt="Site Logo" class="logo">
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"alt="Site Logo" class="logo">
 
     <h1>मोबाइल से लॉगिन करें</h1>
 
