--- a/login.html
+++ b/login.html
@@ -5,77 +5,157 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>लॉगिन - मोबाइल नंबर से</title>
   <style>
-    body { font-family: Arial, sans-serif; background:#f3f4f6; height:100vh; margin:0; display:flex; align-items:center; justify-content:center; }
-    .card { background:#fff; padding:24px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.08); width:330px; max-width:94%; text-align:center; }
-    .logo { width:90px; height:90px; object-fit:contain; display:block; margin:0 auto 12px; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.08); }
-    h1 { font-size:20px; margin:0 0 8px; color:#111827; }
-    input { width:100%; padding:10px; margin-top:8px; border-radius:8px; border:1px solid #ccc; font-size:16px; box-sizing:border-box; }
-    button { width:100%; padding:10px; margin-top:12px; border-radius:8px; border:0; background:#2563eb; color:#fff; font-weight:600; cursor:pointer; }
-    .error { color:#b91c1c; margin-top:10px; }
-    .info { color:#065f46; margin-top:10px; }
-    .welcome { color:#065f46; font-weight:600; margin-top:16px; }
+    :root { --card-bg: #fff; --accent: #2563eb; --muted: #6b7280; --success:#065f46; --danger:#b91c1c; }
+    body{ font-family: Arial, sans-serif; background:#f3f4f6; height:100vh; margin:0; display:flex; align-items:center; justify-content:center; }
+    .wrap { width:360px; max-width:94%; padding:20px; box-sizing:border-box; position:relative; }
+    .card {
+      background:var(--card-bg); border-radius:12px; padding:24px; box-shadow:0 8px 30px rgba(2,6,23,0.08);
+      text-align:center; transition: opacity 600ms ease, transform 600ms ease;
+    }
+    /* fade-out class applied on success */
+    .card.fade-out { opacity:0; transform: translateY(-20px) scale(0.98); pointer-events:none; }
+
+    .logo { width:92px; height:92px; object-fit:contain; display:block; margin:0 auto 12px; border-radius:12px; box-shadow:0 3px 8px rgba(0,0,0,0.08); }
+    .brand-text { font-size:18px; font-weight:600; margin-bottom:8px; color:#111827; display:none; }
+
+    h1 { margin:0 0 8px; font-size:18px; color:#111827; }
+    input { width:100%; padding:10px; margin-top:8px; border-radius:8px; border:1px solid #ddd; font-size:16px; box-sizing:border-box; }
+    button { width:100%; padding:10px; margin-top:12px; border-radius:8px; border:0; background:var(--accent); color:#fff; font-weight:600; cursor:pointer; }
+    .ghost { background:#efefef;color:#111;border:0;margin-top:8px }
+    p.msg { margin-top:10px; font-size:14px; }
+    p.error { color:var(--danger); }
+    p.info { color:var(--muted); }
+    p.success { color:var(--success); }
+
+    /* small helper */
+    .row { display:flex; gap:8px; margin-top:10px; }
+    .small { font-size:13px; color:var(--muted); }
   </style>
 </head>
 <body>
-  <div class="card" id="card">
-    <!-- अगर आपने logo.png अपलोड किया है तो यह लाइन इस्तेमाल करें -->
-    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"alt="Site Logo" class="logo">
+  <div class="wrap">
+    <div id="card" class="card">
+      <img id="siteLogo" class="logo" src="logo.png" alt="Site Logo" style="display:none;">
+      <div id="brandText" class="brand-text">RjPapad</div>
 
-    <h1>मोबाइल से लॉगिन करें</h1>
+      <h1>मोबाइल से लॉगिन करें</h1>
 
-    <div id="loginSection">
-      <input id="mobile" type="tel" maxlength="10" placeholder="अपना मोबाइल नंबर डालें" />
-      <button onclick="checkNumber()">जारी रखें</button>
-      <p id="message"></p>
-    </div>
+      <div id="loginSection">
+        <input id="mobile" type="tel" maxlength="10" inputmode="numeric" placeholder="अपना 10 अंकों का मोबाइल नंबर डालें" />
+        <button id="checkBtn" onclick="checkNumber()">जारी रखें</button>
+        <p id="message" class="msg info"></p>
+        <div class="row" style="justify-content:center;">
+          <button class="ghost" onclick="openRegister()" style="display:inline-block">रजिस्टर करें</button>
+        </div>
+        <p class="small">रजिस्टर फॉर्म बाद में बनाया गया है — अभी "रजिस्टर" पर जाएँ।</p>
+      </div>
 
-    <div id="dashboard" style="display:none">
-      <p class="welcome" id="welcomeText"></p>
-      <p class="info">आप सफलतापूर्वक लॉगिन हो गए हैं।</p>
-      <button style="background:#dc2626" onclick="logout()">लॉगआउट</button>
+      <div id="dashboard" style="display:none">
+        <p id="welcomeText" class="success" style="font-weight:600;"></p>
+        <p class="small">थोड़ी देर में आप मुख्य पेज पर पहुँचेंगे...</p>
+      </div>
     </div>
   </div>
 
-  <script>
-    const registeredNumbers = ["9876543210", "9999999999", "7012345678"];
-    const message = document.getElementById("message");
-    const loginSection = document.getElementById("loginSection");
-    const dashboard = document.getElementById("dashboard");
-    const welcomeText = document.getElementById("welcomeText");
-    const mobileInput = document.getElementById("mobile");
+<script>
+  // CONFIG: demo registeredNumbers (आप इसे हटाकर सर्वर-साइड चेक लगा सकते हैं)
+  let registeredNumbers = ["9876543210","9999999999","7012345678"];
+  // यदि पहले कहीं registration हुआ हो तो localStorage वाले नंबर भी लीजिए
+  const saved = JSON.parse(localStorage.getItem('registeredNumbers') || '[]');
+  registeredNumbers = Array.from(new Set([...registeredNumbers, ...saved]));
 
-    function checkNumber() {
-      const mobile = mobileInput.value.trim();
-      message.className = "";
-      message.textContent = "";
-      if (!/^[0-9]{10}$/.test(mobile)) {
-        message.className = "error";
-        message.textContent = "कृपया 10 अंकों का सही मोबाइल नंबर डालें।";
-        return;
+  const mobileInput = document.getElementById('mobile');
+  const messageP = document.getElementById('message');
+  const card = document.getElementById('card');
+  const loginSection = document.getElementById('loginSection');
+  const dashboard = document.getElementById('dashboard');
+  const welcomeText = document.getElementById('welcomeText');
+  const siteLogo = document.getElementById('siteLogo');
+  const brandText = document.getElementById('brandText');
+
+  // fallback raw URL (aap change kar sakte ho)
+  const fallbackLogoRaw = 'https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/logo.png';
+
+  // logo try load
+  (function tryLoadLogo(){
+    // try relative first
+    loadImage(siteLogo.src || 'logo.png').then(() => {
+      siteLogo.src = siteLogo.src || 'logo.png';
+      siteLogo.style.display = 'block';
+      brandText.style.display = 'none';
+    }).catch(() => {
+      siteLogo.src = fallbackLogoRaw;
+      loadImage(siteLogo.src).then(()=> {
+        siteLogo.style.display = 'block';
+        brandText.style.display = 'none';
+      }).catch(()=> {
+        siteLogo.style.display = 'none';
+        brandText.style.display = 'block';
+      });
+    });
+  })();
+
+  function loadImage(url){ return new Promise((res,rej)=>{ const i=new Image(); i.onload=()=>res(true); i.onerror=()=>rej(false); i.src=url; }); }
+
+  function showMessage(text, kind='info'){
+    messageP.className = 'msg ' + (kind || 'info');
+    messageP.textContent = text;
+  }
+
+  function validateMobile(m){ return /^[0-9]{10}$/.test(m); }
+
+  function checkNumber(){
+    const mobile = mobileInput.value.trim();
+    showMessage('', 'info');
+    if (!validateMobile(mobile)){
+      showMessage('कृपया 10 अंकों का सही मोबाइल नंबर डालें।', 'error');
+      return;
+    }
+    showMessage('नंबर जाँचा जा रहा है...', 'info');
+
+    // simulate server delay
+    setTimeout(()=>{
+      // refresh registered numbers from localStorage each time
+      const stored = JSON.parse(localStorage.getItem('registeredNumbers') || '[]');
+      const allRegistered = Array.from(new Set([...registeredNumbers, ...stored]));
+
+      if (allRegistered.includes(mobile)) {
+        // success: fade out card then redirect to main.html
+        loginSuccess(mobile);
+      } else {
+        // not registered: show message + suggest register
+        showMessage('यह नंबर रजिस्टर्ड नहीं है। कृपया पहले रजिस्टर करें।', 'error');
+        // show register button visible (we already have)
       }
-      message.className = "info";
-      message.textContent = "नंबर की जांच की जा रही है...";
-      setTimeout(() => {
-        if (registeredNumbers.includes(mobile)) {
-          loginSection.style.display = "none";
-          dashboard.style.display = "block";
-          welcomeText.textContent = "स्वागत है " + maskNumber(mobile) + " जी 🙏";
-        } else {
-          message.className = "error";
-          message.textContent = "यह नंबर रजिस्टर्ड नहीं है। कृपया बाद में रजिस्टर करें।";
-        }
-      }, 700);
-    }
+    },700);
+  }
 
-    function maskNumber(num) {
-      return num.slice(0,3) + "****" + num.slice(7);
-    }
-    function logout() {
-      dashboard.style.display = "none";
-      loginSection.style.display = "block";
-      mobileInput.value = "";
-      message.textContent = "";
-    }
-  </script>
+  function loginSuccess(mobile){
+    // show welcome then fade
+    loginSection.style.display = 'none';
+    dashboard.style.display = 'block';
+    welcomeText.textContent = 'स्वागत है ' + maskNumber(mobile) + ' जी 🙏';
+    showMessage('', '');
+
+    // start fade animation (add class)
+    setTimeout(()=> card.classList.add('fade-out'), 80);
+
+    // after fade completes redirect to main page
+    setTimeout(()=> {
+      // replace with your main page
+      window.location.href = 'main.html';
+    }, 700); // 600ms CSS transition + small buffer
+  }
+
+  function openRegister(){
+    // go to register page (you will implement / we provided)
+    window.location.href = 'register.html';
+  }
+
+  function maskNumber(num){ return num.slice(0,3) + '****' + num.slice(7); }
+
+  // Enter key handling
+  mobileInput.addEventListener('keyup', (e)=>{ if (e.key === 'Enter') document.getElementById('checkBtn').click(); });
+</script>
 </body>
 </html>
